--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://mernweb123:mernweb123@portfolioweb-rsy7b.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://mernweb123:mernweb123@portfolioweb-rsy7b.mongodb.net/mern_web?retryWrites=true&w=majority
