building a passport.js and user schema and user router

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://mernweb123:mernweb123@portfolioweb-rsy7b.mongodb.net/mern_web?retryWrites=true&w=majority
+secretOrKey="secret"
