--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
+    "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
@@ -26,7 +27,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "passport-session": "^1.0.2"
+    "passport-session": "^1.0.2",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
