--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-particles-js": "^3.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
     "react-typed": "^1.2.0"
   },
   "scripts": {
