--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
